force-app/main/forceea/objects/ForceeaSetting__mdt/fields/DebugLogClass__c.field-meta.xml
<CustomField>
    <fullName>DebugLogClass__c</fullName>
    <description>The name of the Apex class that stores the method which displays a Debug Log.</description>
    <inlineHelpText>The name of the Apex class that stores the method which displays a Debug Log.</inlineHelpText>
    <label>Debug Log Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>