force-app/main/forceea/objects/ForceeaSetting__mdt/fields/DebugLogMethod__c.field-meta.xml
<CustomField>
    <fullName>DebugLogMethod__c</fullName>
    <description>The name of the Apex method (in the defined Apex class) which displays a Debug Log.</description>
    <label>Debug Log Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>