force-app/main/forceea/objects/ForceeaSetting__mdt/fields/RecordsToCreate__c.field-meta.xml
<CustomField>
    <fullName>RecordsToCreate__c</fullName>
    <defaultValue>201</defaultValue>
    <description>The default number of records to create.</description>
    <inlineHelpText>The default number of records to create.</inlineHelpText>
    <label>Records to create</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>