force-app/main/forceea/objects/ForceeaSetting__mdt/fields/UserMessage__c.field-meta.xml
<CustomField>
    <fullName>UserMessage__c</fullName>
    <description>The message to display when initializing the FObject.</description>
    <inlineHelpText>The message to display when initializing the FObject.</inlineHelpText>
    <label>User message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>